tests/build/cases/widget_new/missing_semi1.stderr
error: expected `;`
 --> $DIR/missing_semi1.rs:9:9
  |
9 |         draggable = true;
  |         ^^^^^^^^^
